# newGL

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  LoadShaders.cpp  LoadShaders.h  Makefile  build.bat  build.sh  cmake_install.cmake  compile_commands.json  gaja.blend  main.cpp  triangles.frag  triangles.vert  vcpkg.json
.cache/clangd/index/: glad.h.36E343057578758A.idx  khrplatform.h.3BC62E2BC815F05E.idx  main.cpp.B655D20B2213F4D3.idx
glad/: Makefile  cmake_install.cmake
glad/include/glad/: glad.h
glad/src/: glad.c
resources/: default.frag  default.vert
